<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cm1title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <HorizontalScrollView
		    android:id="@+id/horizontalScrollView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >
		
		    <TableLayout
			    android:id="@+id/matrixLayout"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			
		  </TableLayout>
		        
	    </HorizontalScrollView>	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	        android:gravity="right" >
	        
		    <Button
		        android:id="@+id/confirmButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/confirm" />
	
		    <Button
		        android:id="@+id/backButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/back" />
	
		    <Button
		        android:id="@+id/cancelButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cancel" />
		    
		    </LinearLayout>
        
    </LinearLayout>

</ScrollView>